--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -13,32 +13,65 @@
     }
   }
   
-  @media screen and (max-width: 1200px) {
-    #profile {
-        display: block;
-        height: auto;
+   @media screen and (max-width: 1200px) {
+    #desktop-nav {
+      display: none;
     }
-
+    #hamburger-nav {
+      display: flex;
+    }
+    #experience,
+    .experience-details-container {
+      margin-top: 2rem;
+    }
+    #profile,
     .section-container {
-        display: block;
-    }
+      display: block;
 
+    }
+    #profile {
+      height: 100px;
+      margin-bottom: 0;
+    }
+    .arrow {
+      display: none;
+    }
+    section,
+    .section-container {
+      height:auto;
+    }
+    section {
+      margin: 0 0%;
+    }
     .section__pic-container {
-        width: 100%;  
-        height: auto;  
-        margin: 0 auto 2rem;
+      width: 275px;
+      height: 275px;
+      margin: 0 auto 2rem;
+      margin-bottom: 100px;
     }
-
+    .about-containers {
+      margin-top: 0;
+    }
     .section__text {
-        margin-top: 3rem; 
-        text-align: center; 
-    }
-
-   
-    .section__header-text {
-        margin-top: 1.5rem; 
-    }
-}
+      margin-left: 10px;
+      text-align: center; 
+  }
+  .contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 3rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: (250, 250, 250);
+    margin: 2rem auto;
+    padding: 2rem;
+  }
+  .contact-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+  }
   
   @media screen and (max-width: 600px) {
     #contact,
