--- a/style.css
+++ b/style.css
@@ -235,17 +235,20 @@ section {
   justify-content: center;
   gap: 1rem;
 }
-a, .btn{
-  font-size: medium;
-}
+
 .btn {
   font-weight: 600;
+  font-size: 1rem;
   transition: all 300ms ease;
   padding: 1rem;
-  width: 8rem;
+  width: 10rem; /* Asegura el mismo ancho para ambos botones */
   border-radius: 2rem;
+  text-align: center; /* Centra el texto horizontalmente */
+  line-height: 1.5rem; /* Ajusta el espaciado vertical del texto */
+  display: flex; /* Utiliza flexbox para centrar */
+  justify-content: center; /* Centra el contenido horizontalmente */
+  align-items: center; /* Centra el contenido verticalmente */
 }
-
 
 .btn-color-1:hover,
 .btn-color-2:hover {
@@ -262,14 +265,16 @@ a, .btn{
   background: rgb(0, 0, 0);
 }
 
+.btn-color-2 {
+  background: none;
+  border: rgb(53, 53, 53) 0.1rem solid;
+}
 
 .btn-color-2:hover {
   border: rgb(255, 255, 255) 0.1rem solid;
 }
 
-.btn-container {
-  gap: 1rem;
-}
+
 
 /* ABOUT SECTION */
 
